--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,9 +13,10 @@
         android:layout_width="180dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toTopOf="@+id/editEmail"
-        app:layout_constraintEnd_toStartOf="@+id/progressLogin"
-        app:layout_constraintStart_toStartOf="@+id/progressLogin"
-        app:layout_constraintTop_toBottomOf="@+id/progressLogin">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <ImageView
             android:id="@+id/imageView"
@@ -87,6 +88,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/background_botao"
+        android:onClick="logar"
         android:text="Acessar"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -99,12 +101,12 @@
         android:id="@+id/txtCadastreSe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Cadastre-se"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/progressLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogar" />
@@ -114,12 +116,12 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/constraint_img"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCadastreSe" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
