--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -71,7 +71,7 @@
         android:background="@drawable/background_caixa_texto"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="textPersonName|textEmailAddress"
+        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
