--- a/app/src/main/res/menu/menu_form.xml
+++ b/app/src/main/res/menu/menu_form.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menuSalvar"
+    <item android:id="@+id/menuDelete"
         android:title="Salvar"
         app:showAsAction="always"
-        android:icon="@drawable/ic_baseline_check_24" />
+        android:icon="@drawable/ic_baseline_restore_from_trash_24" />
 </menu>
