--- a/app/src/main/res/layout/fragment_tarefas.xml
+++ b/app/src/main/res/layout/fragment_tarefas.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#8DF1F1F1"
     tools:context=".ui.fragment.TarefasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerTarefas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="#918C8C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         >
+        app:layout_constraintTop_toTopOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
