--- a/app/src/main/res/navigation/navi_graph.xml
+++ b/app/src/main/res/navigation/navi_graph.xml
@@ -7,23 +7,23 @@
     <fragment
         android:id="@+id/fragmentCadastro"
         android:name="com.gba.myroutine.ui.fragment.CadastroFragment"
-        android:label="fragment_cadastro"
-        tools:layout="@layout/fragment_cadastro" >
-        <action
-            android:id="@+id/action_fragmentCadastro_to_fragmentLogin"
-            app:destination="@id/fragmentLogin" />
-    </fragment>
+        android:label="Cadastro"
+        tools:layout="@layout/fragment_cadastro" />
     <fragment
         android:id="@+id/fragmentLogin"
         android:name="com.gba.myroutine.ui.fragment.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_cadastroFragment"
-            app:destination="@id/fragmentCadastro" />
+            app:destination="@id/fragmentCadastro"
+            app:enterAnim="@anim/slide_in"
+            app:popExitAnim="@anim/slide_out"/>
         <action
             android:id="@+id/action_loginFragment_to_tarefasFragment"
-            app:destination="@id/fragmentTarefas" />
+            app:destination="@id/fragmentTarefas"
+            app:enterAnim="@anim/slide_in"
+            app:popExitAnim="@anim/slide_out"/>
     </fragment>
     <fragment
         android:id="@+id/fragmentTarefas"
@@ -32,19 +32,15 @@
         tools:layout="@layout/fragment_tarefas">
         <action
             android:id="@+id/action_fragmentTarefas_to_fragmentCadastroTarefas"
-            app:destination="@id/fragmentCadastroTarefas" />
-        <action
-            android:id="@+id/action_fragmentTarefas_to_fragmentLogin"
-            app:destination="@id/fragmentLogin" />
+            app:destination="@id/fragmentCadastroTarefas"
+            app:enterAnim="@anim/slide_in"
+            app:popExitAnim="@anim/slide_out"/>
     </fragment>
     <fragment
         android:id="@+id/fragmentCadastroTarefas"
         android:name="com.gba.myroutine.ui.fragment.CadastroTarefaFragment"
         android:label="Tarefa"
         tools:layout="@layout/fragment_cadastro_tarefa">
-        <action
-            android:id="@+id/action_fragmentCadastroTarefas_to_fragmentTarefas"
-            app:destination="@id/fragmentTarefas" />
         <argument
             android:name="id"
             app:argType="integer" />
