Adding and converting app with retrofit
I'm adding retrofit to the project, and converting functions of all project from room to retrofit to use my api, and other changes on structure of the project

--- a/app/src/main/res/navigation/navi_graph.xml
+++ b/app/src/main/res/navigation/navi_graph.xml
@@ -42,7 +42,7 @@
         android:label="Tarefa"
         tools:layout="@layout/fragment_cadastro_tarefa">
         <argument
-            android:name="id"
-            app:argType="integer" />
+            android:name="tarefaArg"
+            app:argType="com.gba.myroutine.room.model.Tarefa"/>
     </fragment>
 </navigation>
